--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,91 @@
+/*NOTES / RESOURCES*/
+/*https://www.cssmatic.com/box-shadow*/
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    background: #a9a9a9;
+    /*background: #a9a9a9;*/
     color: #ffffff;
+}
+
+body {
+    font-family: "Questrial", sans-serif; /*I like this font alot more than the rest*/
+}
+
+nav {
+    background: #f5f5f5;
+    /*-webkit-box-shadow: inset 0px -17px 0px -3px rgba(0,0,0,0.75);*/
+    /*-moz-box-shadow: inset 0px -17px 0px -3px rgba(0,0,0,0.75);*/
+    /*box-shadow: inset 0px -17px 0px -3px rgba(0,0,0,0.75);*/
+    margin-top: 50px;
+    padding: 20px 0;
+}
+
+nav ul {
+    display: flex; /*aligns attributes horizontally*/
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none; /*strips the bullets off the list*/
+    height: 50px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-family: "Montserrat", sans-serif;
+}
+
+nav a:hover {
+    color: #8b0000;
+    transition: 1.5s;
+}
+
+nav li {
+    padding: 0px 25px;
+    font-size: 1.1em;
+}
+
+nav li span {
+    color: #8b0000;
+    padding: 10px;
+}
+
+nav li:first-child {
+    margin-right: auto;
+    font-size: 1.9em;
+    font-family: "Questrial", sans-serif; /*I like this font alot more than the rest*/
+}
+
+footer {
+    padding: 20px 0;
+}
+
+footer .social-icons {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f5f5f5;
+    border-top: 5px solid #000;
+    border-bottom: 5px solid #000;
+}
+
+footer .social-icons .fa {
+    color: #000000;
+    font-size: 1.5em;
+    padding: 20px;
+    width: 50px;
+    text-align: center;
+}
+
+footer .footer-notes {
+    padding: 50px 0;
+    text-align: center;
+    color: #8b0000;
 }
