--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,6 +39,8 @@ nav a {
     font-optical-sizing: auto;
     font-style: normal;
     font-family: "Montserrat", sans-serif;
+    position: sticky;
+    top: 0;
 }
 
 nav a:hover {
@@ -61,6 +63,15 @@ nav li:first-child {
     font-size: 1.9em;
     font-family: "Questrial", sans-serif; /*I like this font alot more than the rest*/
 }
+
+.hero-sec {
+    min-height: 100vh;
+    background: url("Pics/Time.jpg"), no-repeat, center, fixed;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
 
 footer {
     padding: 20px 0;
